Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-3734-g0360abb https://git.reactos.org/?p=reactos.git;a=commit;h=0360abb796ef81e3fa03fa0c9dea8881bdb88a80
Description
0.4.15-dev-3737-gf8faa0b660d
When opening explorer with the ReactOS cdrom inserted it errors out:
kd> kp
|
# ChildEBP RetAddr
|
00 014caaf0 77aa0c75 user32!_RTC_DefaultErrorFuncW(int errType = 0n3, wchar_t * file = 0x77aba490 "unknown file", int line = 0n-1, wchar_t * module = 0x77aba470 "unknown module", wchar_t * format = 0x77aba4b0 "Use of uninitialized variable %S!.")+0x5 [R:\src\dev\sdk\lib\runtmchk\rtcapi.c @ 45]
|
01 014cab14 77a5ca6a user32!_RTC_UninitUse(char * _Varname = 0x77a5d447 "cbTotal")+0x25 [R:\src\dev\sdk\lib\runtmchk\rtcapi.c @ 118]
|
02 014cb0ec 77a5dc4b user32!ICO_ExtractIconExW(wchar_t * lpszExeFileName = 0x014cae98 "D:\icon.ico", struct HICON__ ** RetPtr = 0x014cb16c, int nIconIndex = 0n0, unsigned int nIcons = 1, unsigned int cxDesired = 0x20, unsigned int cyDesired = 0x20, unsigned int * pIconId = 0x014cb16c, unsigned int flags = 0x4000)+0x106a [R:\src\dev\win32ss\user\user32\misc\exticon.c @ 579]
|
03 014cb11c 7b67a3b4 user32!PrivateExtractIconsW(wchar_t * lpwstrFile = 0x014cb420 "D:\icon.ico", int nIndex = 0n0, int sizeX = 0n32, int sizeY = 0n32, struct HICON__ ** phicon = 0x014cb16c, unsigned int * pIconId = 0x00000000, unsigned int nIcons = 1, unsigned int flags = 0x4000)+0x17b [R:\src\dev\win32ss\user\user32\misc\exticon.c @ 768]
|
04 014cb174 7b67c7fb shell32!SIC_LoadIcon(wchar_t * sSourceFile = 0x014cb420 "D:\icon.ico", int dwSourceIndex = 0n0, unsigned long dwFlags = 0)+0x44 [R:\src\dev\dll\win32\shell32\iconcache.cpp @ 397]
|
05 014cb3cc 7b67bdf3 shell32!SIC_GetIconIndex(wchar_t * sSourceFile = 0x014cb420 "D:\icon.ico", int dwSourceIndex = 0n0, unsigned long dwFlags = 0)+0x14b [R:\src\dev\dll\win32\shell32\iconcache.cpp @ 469]
|
06 014cb638 7b67c50f shell32!PidlToSicIndex(struct IShellFolder * sh = 0x00143878, struct _ITEMIDLIST * pidl = 0x001a07bc, int bBigIcon = 0n1, unsigned int uFlags = 0, int * pIndex = 0x014cb6a0)+0x193 [R:\src\dev\dll\win32\shell32\iconcache.cpp @ 749]
|
07 014cb668 79fb24cb shell32!SHMapPIDLToSystemImageListIndex(struct IShellFolder * sh = 0x00143878, struct _ITEMIDLIST * pidl = 0x001a07bc, int * pIndex = 0x014cb6a0)+0xdf [R:\src\dev\dll\win32\shell32\iconcache.cpp @ 798]
|
08 014cd7ec 79fb2e68 browseui!CAddressEditBox::AddComboBoxItem(struct _ITEMIDLIST * pidl = 0x001a07a8, int index = 0n3, int indent = 0n2)+0x1ab [R:\src\dev\dll\win32\browseui\addresseditbox.cpp @ 551]
|
09 014cd868 79fb40ca browseui!CAddressEditBox::FillOneLevel(int index = 0n1, int levelIndent = 0n2, int indent = 0n1)+0x228 [R:\src\dev\dll\win32\browseui\addresseditbox.cpp @ 605]
|
0a 014cd8a0 79fb3417 browseui!CAddressEditBox::PopulateComboBox(struct _ITEMIDLIST * pidlCurrent = 0x001832e0)+0x19a [R:\src\dev\dll\win32\browseui\addresseditbox.cpp @ 522]
|
0b 014cfa8c 79fdf18c browseui!CAddressEditBox::Invoke(long dispIdMember = 0n252, struct _GUID * riid = 0x79ff9668 {00000000-0000-0000-0000-000000000000}, unsigned long lcid = 0, unsigned short wFlags = 1, struct tagDISPPARAMS * pDispParams = 0x014cfaf4, struct tagVARIANT * pVarResult = 0x00000000, struct tagEXCEPINFO * pExcepInfo = 0x00000000, unsigned int * puArgErr = 0x00000000)+0x237 [R:\src\dev\dll\win32\browseui\addresseditbox.cpp @ 403]
|
0c 014cfb0c 79fdf2d5 browseui!CShellBrowser::FireEvent(long dispIdMember = 0n252, int argCount = 0n2, struct tagVARIANT * arguments = 0x014cfb54)+0x17c [R:\src\dev\dll\win32\browseui\shellbrowser.cpp @ 1540]
|
0d 014cfb7c 79fdd9b4 browseui!CShellBrowser::FireNavigateComplete(wchar_t * newDirectory = 0x014cfc38 "C:\Documents and Settings\Administrator\Desktop\asd")+0xa5 [R:\src\dev\dll\win32\browseui\shellbrowser.cpp @ 1563]
|
0e 014cfea8 79fdd287 browseui!CShellBrowser::BrowseToPath(struct IShellFolder * newShellFolder = 0x001d0ef0, struct _ITEMIDLIST * absolutePIDL = 0x00193dd8, struct __WIDL_shobjidl_generated_name_0000001A * folderSettings = 0x014cfed8, long flags = 0n2)+0x674 [R:\src\dev\dll\win32\browseui\shellbrowser.cpp @ 1030]
|
0f 014cfef4 79fdd1cc browseui!CShellBrowser::BrowseToPIDL(struct _ITEMIDLIST * pidl = 0x00193dd8, long flags = 0n2)+0x97 [R:\src\dev\dll\win32\browseui\shellbrowser.cpp @ 814]
|
10 014cff08 79fccf1e browseui!CShellBrowser::BrowseObject(struct _ITEMIDLIST * pidl = 0x00193dd8, unsigned int wFlags = 0)+0x5c [R:\src\dev\dll\win32\browseui\shellbrowser.cpp @ 2247]
|
11 014cffa8 79fcccd3 browseui!ExplorerMessageLoop(struct IEThreadParamBlock * parameters = 0x0017bc70)+0x12e [R:\src\dev\dll\win32\browseui\desktopipc.cpp @ 373]
|
12 014cffb8 7c64870d browseui!BrowserThreadProc(void * lpThreadParameter = 0x0017bc70)+0x23 [R:\src\dev\dll\win32\browseui\desktopipc.cpp @ 433]
|
13 014cffec 00000000 kernel32!BaseThreadStartup(<function> * lpStartAddress = 0x79fcccb0, void * lpParameter = 0x0017bc70)+0x5d [R:\src\dev\dll\win32\kernel32\client\thread.c @ 70]
|
|
Attachments
Issue Links
- blocks
-
CORE-16287 explorer crashes if open folder with cursors
-
- Resolved
-