[USER32] Fix uninitialized cbTotal

CORE-18025